Add a calendar where bath dates can be viewed
