# hottub/src/main/resources/openapi/hottub-api-v1.0.yml
@@ -173,6 +173,23 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/Statistics'
+  /bath-dates:
+    get:
+      tags:
+        - statistics
+      summary: Get all dates the hot tub has been used
+      description: Get all dates the hot tub has been used
+      operationId: getBathDates
+      responses:
+        '200':
+          description: successful operation
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  type: string
+                  format: date
 components:
   schemas:
     Stats:
